log
Thu 28 Mar 2024 09:31:34 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1a13b5e
Thu 28 Mar 2024 09:37:43 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0e30da6
Thu 28 Mar 2024 09:42:52 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
eb88219
Thu 28 Mar 2024 09:45:06 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4413eae
Thu 28 Mar 2024 09:58:59 PM UTC: 
 list.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
7e42d71
Thu 28 Mar 2024 09:59:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
92d4633
Thu 28 Mar 2024 10:00:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
f179b7d
